be/src/runtime/coordinator-backend-state.cc
@@ -239,12 +239,14 @@ void Coordinator::BackendState::ApplyExecStatusReport(
   for (const TFragmentInstanceExecStatus& instance_exec_status:
       backend_exec_status.instance_exec_status) {
     Status instance_status(instance_exec_status.status);
+    int instance_idx = GetInstanceIdx(instance_exec_status.fragment_instance_id);
+    DCHECK_EQ(instance_stats_map_.count(instance_idx), 1);
+    InstanceStats* instance_stats = instance_stats_map_[instance_idx];
+    DCHECK_EQ(instance_stats->exec_params_.instance_id,
+        instance_exec_status.fragment_instance_id);
+    // Ignore duplicate or out-of-order messages.
+    if (instance_stats->done_) continue;
     if (instance_status.ok()) {
-      int instance_idx = GetInstanceIdx(instance_exec_status.fragment_instance_id);
-      DCHECK_EQ(instance_stats_map_.count(instance_idx), 1);
-      InstanceStats* instance_stats = instance_stats_map_[instance_idx];
-      DCHECK_EQ(instance_stats->exec_params_.instance_id,
-          instance_exec_status.fragment_instance_id);
       instance_stats->Update(instance_exec_status, exec_summary, scan_range_progress);
       if (instance_stats->peak_mem_counter_ != nullptr) {
         // protect against out-of-order status updates
@@ -261,7 +263,11 @@ void Coordinator::BackendState::ApplyExecStatusReport(
       }
     }
     DCHECK_GT(num_remaining_instances_, 0);
-    if (instance_exec_status.done) --num_remaining_instances_;
+    if (instance_exec_status.done) {
+      DCHECK(!instance_stats->done_);
+      instance_stats->done_ = true;
+      --num_remaining_instances_;
+    }
 
     // TODO: clean up the ReportQuerySummary() mess
     if (status_.ok()) {
@@ -324,30 +330,41 @@ bool Coordinator::BackendState::Cancel() {
   // set an error status to make sure we only cancel this once
   if (status_.ok()) status_ = Status::CANCELLED;
 
-  Status status;
-  ImpalaBackendConnection backend_client(
-      ExecEnv::GetInstance()->impalad_client_cache(), impalad_address(), &status);
-  if (!status.ok()) return false;
   TCancelQueryFInstancesParams params;
   params.protocol_version = ImpalaInternalServiceVersion::V1;
   params.__set_query_id(query_id_);
   TCancelQueryFInstancesResult dummy;
   VLOG_QUERY << "sending CancelQueryFInstances rpc for query_id="
-             << query_id_ << " backend=" << impalad_address();
+             << query_id_ << " backend=" << TNetworkAddressToString(impalad_address());
+
   Status rpc_status;
+  Status client_status;
   // Try to send the RPC 3 times before failing.
-  bool retry_is_safe;
   for (int i = 0; i < 3; ++i) {
-    rpc_status = backend_client.DoRpc(
-        &ImpalaBackendClient::CancelQueryFInstances, params, &dummy, &retry_is_safe);
-    if (rpc_status.ok() || !retry_is_safe) break;
+    ImpalaBackendConnection backend_client(ExecEnv::GetInstance()->impalad_client_cache(),
+        impalad_address(), &client_status);
+    if (client_status.ok()) {
+      // The return value 'dummy' is ignored as it's only set if the fragment instance
+      // cannot be found in the backend. The fragment instances of a query can all be
+      // cancelled locally in a backend due to RPC failure to coordinator. In which case,
+      // the query state can be gone already.
+      rpc_status = backend_client.DoRpc(
+          &ImpalaBackendClient::CancelQueryFInstances, params, &dummy);
+      if (rpc_status.ok()) break;
+    }
+  }
+  if (!client_status.ok()) {
+    status_.MergeStatus(client_status);
+    VLOG_QUERY << "CancelQueryFInstances query_id= " << query_id_
+               << " failed to connect to " << TNetworkAddressToString(impalad_address())
+               << " :" << client_status.msg().msg();
+    return true;
   }
   if (!rpc_status.ok()) {
     status_.MergeStatus(rpc_status);
-    stringstream msg;
-    msg << "CancelQueryFInstances rpc query_id=" << query_id_
-        << " failed: " << rpc_status.msg().msg();
-    status_.AddDetail(msg.str());
+    VLOG_QUERY << "CancelQueryFInstances query_id= " << query_id_
+               << " rpc to " << TNetworkAddressToString(impalad_address())
+               << " failed: " << rpc_status.msg().msg();
     return true;
   }
   return true;
@@ -377,6 +394,7 @@ Coordinator::BackendState::InstanceStats::InstanceStats(
     ObjectPool* obj_pool)
   : exec_params_(exec_params),
     profile_(nullptr),
+    done_(false),
     profile_created_(false),
     total_split_size_(0),
     total_ranges_complete_(0) {
