be/src/runtime/coordinator-backend-state.h
@@ -135,6 +135,11 @@ class Coordinator::BackendState {
     /// owned by coordinator object pool provided in the c'tor, created in Update()
     RuntimeProfile* profile_;
 
+    /// true if the final report has been received for the fragment instance.
+    /// Used to handle duplicate done ReportExecStatus RPC messages. Used only
+    /// in ApplyExecStatusReport()
+    bool done_;
+
     /// true after the first call to profile->Update()
     bool profile_created_;
 
